@@ -4,6 +4,13 @@ Changelog
 2.0.4 - unreleased
 ------------------
 
+* Acquire request object via local site hook if object is not
+  acquisition-wrapped (in ``cachingInstanceSchemaFactory``). This
+  fixes caching issues with objects rendered using DTML. Note that
+  this is likely a bug in the ``DocumentTemplate`` code. Ideally, the
+  issue should be resolved there.
+  [malthe]
+
 * Added example how to use ordered extenders and browser layer aware extenders [miohtama]
 
 2.0.3 - 2010-07-07
